syntax = "proto3";

package hellopb;

import "third_party/google/api/annotations.proto";
import "third_party/validate/validate.proto";

option go_package = "./pb/hellopb";

message SayHelloRequest {
    string message = 1 [(validate.rules).string = {
        len: 5,
    }];
}

message SayHelloResponse {
    string message = 1;
}

service Hello {
    rpc SayHello(SayHelloRequest) returns(SayHelloResponse) {};
}